--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,16 +2,43 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Rostik Slipetskyy">
+    <meta name="description" content="Personal blog about various Software Engineering topics authored by Rostik Slipetskyy">
     <title>{{ page.title }}</title>
-    <!-- <meta name="author" content="{{ site.author.name }}"> -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
+    <header>
+      <div class="container">
+        <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">Rostik Slipetskyy :: Personal blog</a>
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="/">Home</a></li>
+            </ul>
+          </div>
+        </div>
+        </nav>
+      </div>
+    </header>
     <article>
       <div class="container">
         {{ content }}
       </div>
     </article>
+    <footer>
+    </footer>
   <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" /> -->
   </body>
 </html>
