--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,35 +10,41 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
+    <div class="container">
+
     <header>
-      <div class="container">
-        <nav class="navbar navbar-default">
+      <nav class="navbar navbar-default">
         <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Rostik Slipetskyy :: Personal blog</a>
+	          <a class="navbar-brand" href="/">Rostik Slipetskyy :: Personal blog</a>
           </div>
-          <div id="navbar" class="navbar-collapse collapse">
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="/">Home</a></li>
+              <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
             </ul>
           </div>
         </div>
-        </nav>
-      </div>
+      </nav>
     </header>
+
     <article>
       <div class="container">
         {{ content }}
       </div>
     </article>
+    
     <footer>
     </footer>
+    
+    </div>
   <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" /> -->
   </body>
 </html>
