--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,12 +23,13 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-	          <a class="navbar-brand" href="/">Rostik Slipetskyy :: Personal blog</a>
+	    <a class="navbar-brand" href="/">Rostik Slipetskyy :: Personal blog</a>
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="navbar-collapse-1">
             <ul class="nav navbar-nav">
               <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
+	      <li><a href="#">About</a></li>
             </ul>
           </div>
         </div>
