--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,6 @@
     </footer>
     
     </div>
-  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" /> -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </body>
 </html>
