--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,13 +23,14 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-	    <a class="navbar-brand" href="/">Rostik Slipetskyy :: Personal blog</a>
+	    <a class="navbar-brand" href="/">Rostik Slipetskyy :: blog</a>
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="navbar-collapse-1">
             <ul class="nav navbar-nav">
               <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
-	      <li><a href="#">About</a></li>
+			  <li><a href="/android/security/">Android Security</a></li>
+			  <li><a href="/about/">About</a></li>
             </ul>
           </div>
         </div>
@@ -37,6 +38,7 @@
     </header>
 
     <article>
+	  <h1>{{ page.title }}</h1>
       <div class="container">
         {{ content }}
       </div>
