--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
               <li><a href="/android/security/">Android Security</a></li>
-              <li><a href="/about/">About</a></li>
+              <!--<li><a href="/about/">About</a></li>-->
             </ul>
           </div>
         </div>
