--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,11 @@
         height: auto;
         display: block;
       }
+	  img .img-left {
+	    float: left;
+		margin-right: 10px;
+		max-width: 50%;
+	  }
     </style>
   </head>
   <body>
@@ -37,7 +42,7 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
               <li><a href="/android/security/">Android Security</a></li>
-              <li><a href="/about/">About</a></li>
+              <li><a href="/about">About</a></li>
             </ul>
           </div>
         </div>
