adding bing site ownership verification

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,8 @@
     {% if page.description %}<meta name="description" content="{{ page.description }}">
 	{% else %}<meta name="description" content="Personal blog about various Software Engineering topics authored by Rostik Slipetskyy">
 	{% endif %}
-    <title>{{ page.title }}</title>
+    <meta name="msvalidate.01" content="435FB0AECE48835C89DF8C621DEA9940" />
+	<title>{{ page.title }}</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <style>
       img {
